--- a/24HoursOfFame/app/src/main/res/menu/main.xml
+++ b/24HoursOfFame/app/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <item android:id="@+id/uploadText"
+    <item android:id="@+id/createTextItem"
         android:title="@string/upload_text"
         android:orderInCategory="100"
         android:showAsAction="never" />
